브랜드, 프로필, 컨텐츠 백그라운드 및 색상 재수정
.c3 line,.c3 path{fill:none;stroke:#fff;}
 > 해당 부분 stroke:silver  로 변경이 필요함..

--- a/app/elements/base/base-home.html
+++ b/app/elements/base/base-home.html
@@ -111,7 +111,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 2;
                 grid-column-start: 2;
                 grid-column-end: 2;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
+                fill: silver;
             }
 
             #august-chart-container {
@@ -120,7 +121,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 3;
                 grid-column-start: 2;
                 grid-column-end: 2;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
+                fill: silver;
             }
 
             #september-chart-container {
@@ -129,7 +131,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 4;
                 grid-column-start: 2;
                 grid-column-end: 2;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
+                fill: silver;
             }
 
             #july-sum {
@@ -138,7 +141,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 2;
                 grid-column-start: 3;
                 grid-column-end: 3;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
             }
 
             #august-sum {
@@ -147,7 +150,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 3;
                 grid-column-start: 3;
                 grid-column-end: 3;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
             }
 
             #september-sum {
@@ -156,7 +159,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-row-end: 4;
                 grid-column-start: 3;
                 grid-column-end: 3;
-                border: 1px solid #d8d9db;
+                background-color: rgba(255,255,255,.04);
             }
 
             div.bottom-section {
@@ -165,7 +168,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 grid-column-start: 3;
                 grid-column-end: 3;
                 text-align: right;
-                color: #656565;
+                color: var(--things-primary-text-color);
                 font-size: 13px;
             }
 
@@ -191,7 +194,7 @@ Copyright © HatioLab Inc. All rights reserved.
 
             span.percent {
                 font-size: 23px;
-                color: #3c3c3c;
+                color: #fff;
                 text-align: center;
                 font-weight: bold;
             }
@@ -216,6 +219,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 display: inline;
                 text-align: right;
             }
+
+
         </style>
 
         <div class="container">
