--- a/app/elements/things-layout/things-sidebar-toggle.html
+++ b/app/elements/things-layout/things-sidebar-toggle.html
@@ -31,11 +31,12 @@ Copyright © HatioLab Inc. All rights reserved.
         height:39px;
         padding: 14px 0 0 10px;
         color:#fff;
-        font-size:26px;
+        font-size:22px;
         position:fixed;
-        top: -5px;
+        top: -3px;
         z-index: 1;
-        left:32px;
+        left:37px;
+        font-family:"Verdana","Helvetica";
       }
     </style>
 
