--- a/app/elements/things-recent-page/things-tab.html
+++ b/app/elements/things-recent-page/things-tab.html
@@ -35,7 +35,7 @@ Custom property | Description | Default
         --tab-selected-text:#fff;
       }
       .tab-left {
-        border-left:1px solid #000;
+
         width:9px;
         background-color: #252222;
         z-index:1;
@@ -52,6 +52,7 @@ Custom property | Description | Default
         overflow: hidden;
         align-items: center;
         color:rgba(255,255,255,.5);
+        border-right:1px solid rgba(0,0,0,.5);
       }
       .tab-title {
         text-overflow: ellipsis;
