--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
         background-color: rgba(0, 0, 0, 0.2);
       }
       ::-webkit-scrollbar-thumb:hover {
-        background-color: #49a8df;
+        background-color: rgba(255, 255, 255, 0.2);
       }
       @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
