--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -69,7 +69,8 @@
       }
 
       #mainSection {
-        background-color: #fff
+        background-color: #3c3c3c;
+        border-left: 1px solid #252222;
       }
 
       #mainSection:-webkit-full-screen {
@@ -148,7 +149,7 @@
       paper-toolbar span.title {
         margin-top: 3px;
         margin-left: 0 !important;
-        color: #585858;
+        color: #fff;
         font-weight: bold;
         font-size: 22px;
         letter-spacing: -1px
@@ -158,7 +159,7 @@
         display: inline-block;
         margin-right: 7px;
         font-weight: normal;
-        color: #7b7b7b;
+        color: var(--things-primary-text-color);
         font-size: 16px;
         text-transform: capitalize;
       }
@@ -180,20 +181,19 @@
       }
 
       .header {
-        background-color: #252222;
-        padding-top: 12px;
-        padding-right: 12px;
-        border-bottom: 1px solid rgba(0, 0, 0, .5);
-        color: #fff;
-        padding-right:22px;
+        background-color: #312e2e;
+        padding: 6px 0;
+        /* border-bottom: 1px solid rgba(255, 255, 255, .2); */
+        color: rgba(255, 255, 255, .4);
+        padding-right: 11px;
       }
 
       .header ::shadow iron-icon {
-        fill: #f7af01;
-        margin-top: 5px ;
+        /* fill: #312e2e; */
+        margin-top: 2px ;
         width:18px;
         height:18px;
-        padding-left:6px;
+        padding-left:5px;
       }
 
       .header ::shadow things-profile paper-icon-button {
