things-primary-color 수정

--- a/app/elements/base/base-home.html
+++ b/app/elements/base/base-home.html
@@ -174,9 +174,9 @@ Copyright © HatioLab Inc. All rights reserved.
 
             span.month {
                 font-size: 21px;
-                color: #3c3c3c;
+                color: #222;
                 text-align: center;
-                background-color: #facf67;
+                background-color: var(--things-primary-color);
                 width: 62px;
                 height: 39px;
                 line-height: 41px;
