--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -95,7 +95,7 @@ Copyright © HatioLab Inc. All rights reserved.
             /* color style */
             --things-primary-background-color: #252222; /*darkgray*/
             --things-secondary-background-color: #f7af01; /*yellow*/
-            --things-primary-color: #dcb33e; /*pastel yellow*/
+            --things-primary-color: #e6b84b; /*pastel yellow*/
             --things-secondary-color: #f7af01; /*yellow*/
             --things-focus-background-color: #4caf50;
             --things-whitegrey-background-color:#3c3c3c;
