리스트스타일, 탭 닫기 버튼, 그리드 수정

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -93,21 +93,21 @@ Copyright © HatioLab Inc. All rights reserved.
             }
 
             /* color style */
-            --things-primary-background-color: #252222; /*darkgray*/
-            --things-secondary-background-color: #f7af01; /*yellow*/
-            --things-primary-color: #e6b84b; /*pastel yellow*/
-            --things-secondary-color: #f7af01; /*yellow*/
-            --things-focus-background-color: #4caf50;
-            --things-whitegrey-background-color:#3c3c3c;
-            --things-lightgrey-background-color:rgba(0, 0, 0, .1);
-            --things-white-background-color:#fff;
-            --things-error-color:var(--paper-deep-orange-700);
-            --things-primary-text-color: #ababab;
-            --things-dark-text-color: #585858;
-            --things-sidebar-text-color:#fff;
-            --things-button-text-color:#1d1e21;
-            --things-dark-desc-text-color:#8b9eaf;
-            --things-sidebar-background-color:#312e2e;
+          --things-primary-background-color: #252222; /*darkgray*/
+          --things-secondary-background-color: #f7af01; /*yellow*/
+          --things-primary-color: #e6b84b; /*pastel yellow*/
+          --things-secondary-color: #f7af01; /*yellow*/
+          --things-focus-background-color: #f7af01;
+          --things-whitegrey-background-color:#3c3c3c;
+          --things-lightgrey-background-color:rgba(0, 0, 0, .1);
+          --things-white-background-color:#fff;
+          --things-error-color:var(--paper-deep-orange-700);
+          --things-primary-text-color: #ababab;
+          --things-dark-text-color: #585858;
+          --things-sidebar-text-color:#fff;
+          --things-button-text-color:#1d1e21;
+          --things-dark-desc-text-color:#aaacaf;
+          --things-sidebar-background-color:#312e2e;
 
 
 
@@ -254,7 +254,7 @@ Copyright © HatioLab Inc. All rights reserved.
             --things-tab-size:35px;
             --paper-tabs: {
                 background-color: rgba(0, 0, 0, .05);
-                color: var(--things-primary-text-color);
+                color: var(--things-dark-text-color);
                 font-weight: 400;
             }
             --things-content-tabs:{
@@ -344,7 +344,7 @@ Copyright © HatioLab Inc. All rights reserved.
             }
             --things-button-hover: {
                 @apply(--things-button);
-                background: var(--things-primary-color);
+                background: rgba(255,255,255,.2);
                 color: #fff;
                 font-weight:bold;
             }
