--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -69,7 +69,7 @@
       }
 
       #mainSection {
-        background-color: #3c3c3c;
+        background-color: var(--things-whitegrey-background-color);
         border-left: 1px solid #252222;
       }
 
