--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ::shadow paper-material.things-search-form iron-icon.things-combo, ::shadow paper-material.things-search-form .picker,::shadow paper-material.things-search-form iron-icon.things-resource-selector,
       ::shadow paper-material.things-search-form iron-icon.things-resource-format-selector {
         height:24px;
-        background-color:#006292;
+        background-color: #5d5d5d;
       }
       ::shadow paper-material.things-search-form .picker{
         top:2px;
@@ -90,7 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       ::shadow paper-fab {
-        margin-right: 0px !important;
+        margin-right: -10px !important;
       }
 
       ::shadow paper-fab iron-icon{
