--- a/app/elements/things-layout/things-sidebar.html
+++ b/app/elements/things-layout/things-sidebar.html
@@ -85,7 +85,7 @@ Copyright © HatioLab Inc. All rights reserved.
       paper-item:before {
         content:"";
         display:inline-block;
-        width:3px;height:3px;
+        width:4px;height:1px;
         position:relative;
         top:-3px;
         margin-right:3px;
@@ -106,7 +106,7 @@ Copyright © HatioLab Inc. All rights reserved.
 
 
       paper-item[active]{
-        color:#fff;
+        color:#e6b84b;
         font-weight:bold;
         background-color:rgba(0,0,0,.1);
       }
