--- a/app/elements/things-recent-page/things-tab.html
+++ b/app/elements/things-recent-page/things-tab.html
@@ -93,16 +93,13 @@ Custom property | Description | Default
         display: flex;
         align-content: stretch;
         flex-direction: column-reverse;
-        color:rgba(255,255,255,.5)
+        opacity:0.5;
       }
       .tab-close:before {
-        content: "X";
-        font-size: 12px;
-        font-weight:normal;
-        font-family:Arial;
+        content: url(../../images/tab-close.png);
       }
       .tab-close:hover {
-        color: #fff;
+        opacity:1;
       }
 
     </style>
