사이드바 상단메뉴 hover 추가

--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -195,6 +195,9 @@
         height:18px;
         padding-left:5px;
       }
+      .header ::shadow iron-icon:hover, things-profile:hover{
+        color: var(--things-primary-color);
+      }
 
       .header ::shadow things-profile paper-icon-button {
         margin-right: 0;
