상세화면 버튼 수정

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -329,7 +329,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 border-left: 1px solid rgba(0, 0, 0, .1);
             }
             --things-button: {
-                background: rgba(255,255,255,.1); /* Old browsers */
+                background: #505050; /* Old browsers */
                 /* background: linear-gradient(to bottom, #d0d7db 0%,#92a1a8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
                 @apply(--things-default-border-radius);
                 min-width: initial;
@@ -342,9 +342,10 @@ Copyright © HatioLab Inc. All rights reserved.
                 box-shadow: none;
                 /* text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6); */
             }
+
             --things-button-hover: {
                 @apply(--things-button);
-                background: rgba(255,255,255,.2);
+                background: #666666;
                 color: #fff;
                 font-weight:bold;
             }
@@ -401,7 +402,7 @@ Copyright © HatioLab Inc. All rights reserved.
               color: var(--things-primary-text-color);
              }
             --things-login-button: {
-              background-color: var(--things-focus-background-color);
+              background-color: var(--things-primary-background-color);
               min-width: initial;
               width:100%;
               max-height:31px;
@@ -417,7 +418,6 @@ Copyright © HatioLab Inc. All rights reserved.
               background-size:cover;
               background-repeat: no-repeat;
             }
-
 
 
 
